# xlinkanalysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: analysis_config.yaml  domains.yaml
notebooks/: example_workflow.py
scripts/: extract_residues.py  run_analysis.py
src/xlinkanalysis/: __init__.py  chimera.py  config.py  distances.py  domains.py  filtering.py  io.py  statistics.py  visualization.py
